--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-GI_Web_App_Automation" class="navigator-link">
-              <span class="suite-name border-failed">GI Web App Automation</span>
+              <span class="suite-name border-passed">GI Web App Automation</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -93,21 +93,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-GI_Web_App_Automation" class="hide-methods failed suite-GI_Web_App_Automation"> (hide)</a> <!-- hide-methods failed suite-GI_Web_App_Automation -->
-                      <a href="#" panel-name="suite-GI_Web_App_Automation" class="show-methods failed suite-GI_Web_App_Automation"> (show)</a> <!-- show-methods failed suite-GI_Web_App_Automation -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-GI_Web_App_Automation" class="hide-methods passed suite-GI_Web_App_Automation"> (hide)</a> <!-- hide-methods passed suite-GI_Web_App_Automation -->
+                      <a href="#" panel-name="suite-GI_Web_App_Automation" class="show-methods passed suite-GI_Web_App_Automation"> (show)</a> <!-- show-methods passed suite-GI_Web_App_Automation -->
                     </span>
-                    <div class="method-list-content failed suite-GI_Web_App_Automation">
+                    <div class="method-list-content passed suite-GI_Web_App_Automation">
                       <span>
-                        <img src="failed.png" width="3%"/>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-GI_Web_App_Automation" title="testDrivers.TestDriver" class="method navigator-link" hash-for-method="tDriver(newInsOR_001, INSORConfig, NewOR)">tDriver(newInsOR_001, INSORConfig, NewOR)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-GI_Web_App_Automation -->
+                    </div> <!-- method-list-content passed suite-GI_Web_App_Automation -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -119,9 +119,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-GI_Web_App_Automation" class="panel GI_Web_App_Automation">
-          <div class="suite-GI_Web_App_Automation-class-failed">
+          <div class="suite-GI_Web_App_Automation-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">testDrivers.TestDriver</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -131,15 +131,10 @@
                   </a> <!-- tDriver(newInsOR_001, INSORConfig, NewOR) -->
                   <span class="method-name">tDriver</span>
                   <span class="parameters">(newInsOR_001, INSORConfig, NewOR)</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [P] but found [E]
-	at testDrivers.TestDriver.tDriver(TestDriver.java:194)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 33 stack frames
-</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-GI_Web_App_Automation-class-failed -->
+          </div> <!-- suite-GI_Web_App_Automation-class-passed -->
         </div> <!-- panel GI_Web_App_Automation -->
         <div panel-name="test-xml-GI_Web_App_Automation" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -199,7 +194,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'tDriver')
 data.setCell(0, 2, 'testDrivers.TestDriver')
-data.setCell(0, 3, 74450);
+data.setCell(0, 3, 90209);
 window.suiteTableData['GI_Web_App_Automation']= { tableData: data, tableDiv: 'times-div-GI_Web_App_Automation'}
 return data;
 }
@@ -236,14 +231,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">tDriver(newInsOR_001, INSORConfig, NewOR)</span>
-                <span class="method-start">206 ms</span>
+                <span class="method-start">196 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">endReport</span>
-                <span class="method-start">74700 ms</span>
+                <span class="method-start">90461 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
